# specgate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE3_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  SPECGATE_FOR_AGENTS.md  WAVE0_CONTRACT.md  code-review-report.md
.factory/: init.sh  services.yaml
.opencode/: build-metrics.jsonl
docs/: BASELINE_POLICY.md  CI-GATE-UNDERSTANDING.md  DOGFOOD_RELEASE_CHANNEL.md  DOGFOOD_ROLLOUT_CHECKLIST.md  DOGFOOD_SUCCESS_METRICS.md  OPERATOR_GUIDE.md  getting-started.md  mvp-merge-gate.md  phase5-envelope-ast-plan-v2.md  phase5-envelope-ast-plan.md  phase5-review-nous.md  project-status.md  roadmap.md  spec-language.md  specgate-boundary-contracts-v2.md  specgate-implementation-plan-v1.1.md  support-matrix-v1.md  tier-a-fixture-design-v1.md  tsjs-ecosystem-plan-opus-review.md  tsjs-ecosystem-plan-resolver-review.md
src/: build_info.rs  lib.rs  main.rs
tests/: adversarial_fixtures.rs  baseline_metadata.rs  contract_e2e.rs  contract_e2e_edge.rs  contract_fixtures.rs  contract_validation_fixtures.rs  contracts_rules_contract_refs.rs  doctor_parity_fixtures.rs  edge_classification_integration.rs  envelope_checks.rs  golden_corpus.rs  golden_corpus_gate.rs  governance_consistency_integration.rs  hygiene_integration.rs  integration.rs  monorepo_integration.rs  mvp_gate_baseline.rs  ownership_validation.rs  perf_budget.rs  policy_diff_compensation.rs  policy_diff_config.rs  policy_diff_config_structured.rs  tier_a_golden.rs  (+5 more)
(+465 files in other folders)
